adicionando java script

--- a/HTML_CSS_JavaScript/Sobre Vitoria/style-contato.css
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/style-contato.css
@@ -12,7 +12,7 @@ body{
 header{
     text-align: center;
     background-color: #da689d;
-    color: rgb(255, 255, 255);
+    color: #ffffff;
     text-transform: uppercase;
     padding: 20px;
     margin: 0 0 10px 0; /*ou marginbottom:50px */
@@ -20,17 +20,10 @@ header{
     text-decoration: none;
 }
 
-/*corpo*/
-h1{
-    text-align: center;
-    background-color: #da689d;
-    color: rgb(255, 255, 255);
-}
-
 nav{
     text-align: center;
-    background-color: #da689d;
-    color: rgb(255, 255, 255);
+    background-color: #ee95ba;
+    color: #ffffff;
     text-transform: uppercase;
     padding: 20px;
     margin: 0 0 10px 0;
@@ -38,28 +31,20 @@ nav{
     text-decoration: none; 
 }
 
+form{
+    border-radius: 20px;
+    color: #000000;
+}
+
 button{
     border-radius: 20px;
 }
 
-/* imagem*/
-img{
-    width: 100%;
+input{
     border-radius: 20px;
+    background-color: #ffffff;
 }
-
-li{
-    display: inline
-    }
-
-/*Rodapé*/
-footer{
-    text-align: center;
-    font-size: 15px;
-    color:rgb(255, 255, 255);
-    text-transform: uppercase;
-    background-color: #da689d;
+textarea{
     border-radius: 20px;
-
-    padding: 20 px;
+    background-color: #ffffff;
 }
