--- a/HTML_CSS_JavaScript/Sobre Vitoria/style-contato.css
+++ b/HTML_CSS_JavaScript/Sobre Vitoria/style-contato.css
@@ -48,3 +48,16 @@ textarea{
     border-radius: 20px;
     background-color: #ffffff;
 }
+
+/*rodapé*/
+footer{
+    text-align: center;
+    font-size: 15px;
+    color:rgb(255, 255, 255);
+    text-transform: uppercase;
+    background-color: #da689d;
+    border-radius: 20px;
+
+    padding: 50 px;
+    margin: 50px 0 0 0 ;
+}
